<resources>
    <string name="app_name">Silo Überwachung</string>
    <string name="text_new">Neu</string>
    <string name="text_view_add_item">Element hinzufügen</string>
    <string name="text_view_remove_ads">Werbung entfernen</string>
    <string name="text_view_history">Verlauf</string>
    <string name="text_edit">Bearbeiten</string>
    <string name="text_delete">Löschen</string>
    <string name="text_fill_level">Füllstand:</string>
    <string name="text_capacity">Kapazität:</string>
    <string name="text_need_per_day">Täglicher Bedarf:</string>
    <string name="text_silo_empty_on">Silo ist leer am:</string>
    <string name="text_silo_notification_on">Benachrichtigung am:</string>
    <string name="silo_name">Silo Name (z.B. Silo 1)</string>
    <string name="silo_capacity">Silo Kapazität (z.B. 15.000 kg)</string>
    <string name="silo_content">Silo Inhalt (z.B. Futter)</string>
    <string name="need_per_day">Täglicher Bedarf (z.B. 15 kg)</string>
    <string name="be_notified_earlier">Früher benachrichtigt werden (z.B. 2 Tage)</string>
    <string name="last_delivery_quantity">Letzte Liefermenge (z.B. 15.000 kg)</string>
    <string name="last_delivery_date">Letzes Lieferdatum:</string>
    <string name="last_delivery_date_example">17.07.2022</string>
    <string name="select">Auswählen</string>
    <string name="create_silo">Silo erstellen</string>
    <string name="create">Erstellen</string>
    <string name="edit_silo">Silo bearbeiten</string>
    <string name="apply_changes">Übernehmen</string>
    <string name="cancel">Abbrechen</string>
    <string name="delete">Löschen</string>
    <string name="delete_title">ACHTUNG!</string>
    <string name="delete_message">Bist du sicher, dass du das Silo löschen willst?</string>
    <string name="delete_message_entry">Bist du sicher, dass du den Eintrag löschen willst?</string>
    <string name="empty">Das Silo ist leer!</string>
    <string name="empty_field">Das Feld darf nicht leer sein!</string>
    <string name="must_not_be_null">Muss größer als Null sein!</string>
    <string name="too_big">Darf nicht größer als Kapazität des Silos sein!</string>
    <string name="no_silos_created">Noch keine Silos erstellt</string>
    <string name="click_on_new_to_create_a_silo">Zum erstellen auf \'NEU\' klicken</string>
    <string name="left">übrig</string>
    <string name="silo_history">Verlauf</string>
    <string name="kg_were_refilled">kg wurden aufgefüllt</string>
    <string name="kg_have_been_taken_out">kg wurden herausgenommen</string>
    <string name="date">Datum</string>
    <string name="amount_example">Menge (z.B. 100 kg)</string>
    <string name="fill_silo">Silo auffüllen</string>
    <string name="empty_silo">Silo entleeren</string>
    <string name="create_entry">Eintrag erstellen</string>
    <string name="edit_entry">Eintrag bearbeiten</string>
    <string name="add">Hinzufügen</string>
    <string name="too_much_added">Zu viel dem Silo hinzugefügt!</string>
    <string name="too_much_removed">Zu viel aus dem Silo entnommen!</string>
    <string name="element_was_added">Element wurde hinzugefügt</string>
    <string name="element_was_removed">Element wurde gelöscht</string>
    <string name="element_was_edited">Element wurde bearbeitet</string>
    <string name="silo_is_soon_empty">Ein Silo ist bald leer!</string>
    <string name="is_empty_in">ist leer in</string>
    <string name="days">Tage</string>
    <string name="day">Tag</string>
</resources>