<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_remove_ads"
        android:title="@string/text_view_remove_ads"
        android:icon="@drawable/ic_remove_ads"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_view_history"
        android:title="@string/text_view_history"
        android:icon="@drawable/ic_list_ul"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/text_edit"
        android:icon="@drawable/ic_pencil_fill"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/text_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always" />

</menu>