<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="32dp">

    <TextView
        android:id="@+id/text_view_create_silo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/create_silo"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/SiloMonitoring.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/text_input_layout_silo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_below="@id/text_view_create_silo"
        android:hint="@string/silo_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_silo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@color/black_secondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/SiloMonitoring.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/text_input_layout_silo_capacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/text_input_layout_silo_name"
        android:hint="@string/silo_capacity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_silo_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@color/black_secondary" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/SiloMonitoring.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/text_input_layout_silo_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/text_input_layout_silo_capacity"
        android:hint="@string/silo_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_silo_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@color/black_secondary" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/SiloMonitoring.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/text_input_layout_need_per_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/text_input_layout_silo_content"
        android:hint="@string/need_per_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_need_per_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@color/black_secondary" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        style="@style/SiloMonitoring.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/text_input_layout_last_delivery_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/text_input_layout_need_per_day"
        android:hint="@string/last_delivery_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_last_delivery_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@color/black_secondary" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/text_view_silo_last_refill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_layout_last_delivery_quantity"
        android:layout_marginTop="22dp"
        android:text="@string/last_delivery_date"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_silo_last_refill"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_silo_last_delivery_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last_delivery_date_example"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:alpha="0.64" />

        <Button
            android:id="@+id/button_select_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/select"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/black_secondary"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardCornerRadius="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="12dp"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>