<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:wave="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black_secondary"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

        <TextView
            android:id="@+id/text_view_fill_level_kg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:text="xxxx kg left"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/app_bar_layout"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/ad_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_edit">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/black_secondary"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/text_fill_level"
                            android:textColor="@color/white"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMinTextSize="16sp"
                            app:autoSizeMaxTextSize="22sp"
                            app:autoSizeStepGranularity="1sp" />

                        <TextView
                            android:id="@+id/text_view_fill_level_percent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:alpha="0.64"
                            android:text="xxx,xx %"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMinTextSize="16sp"
                            app:autoSizeMaxTextSize="22sp"
                            app:autoSizeStepGranularity="1sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/text_capacity"
                            android:textColor="@color/white"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMinTextSize="16sp"
                            app:autoSizeMaxTextSize="22sp"
                            app:autoSizeStepGranularity="1sp" />

                        <TextView
                            android:id="@+id/text_view_capacity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:alpha="0.64"
                            android:text="xxxx kg"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMinTextSize="16sp"
                            app:autoSizeMaxTextSize="22sp"
                            app:autoSizeStepGranularity="1sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/text_content"
                            android:textColor="@color/white"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMinTextSize="16sp"
                            app:autoSizeMaxTextSize="22sp"
                            app:autoSizeStepGranularity="1sp" />

                        <TextView
                            android:id="@+id/text_view_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:alpha="0.64"
                            android:text="xxxxx"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMinTextSize="16sp"
                            app:autoSizeMaxTextSize="22sp"
                            app:autoSizeStepGranularity="1sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/text_need_per_day"
                            android:textColor="@color/white"
                            app:autoSizeMinTextSize="16sp"
                            app:autoSizeMaxTextSize="22sp"
                            app:autoSizeStepGranularity="1sp"
                            app:autoSizeTextType="uniform" />

                        <TextView
                            android:id="@+id/text_view_need_per_day"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:alpha="0.64"
                            android:text="xx kg"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMinTextSize="16sp"
                            app:autoSizeMaxTextSize="22sp"
                            app:autoSizeStepGranularity="1sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/text_silo_empty_on"
                            android:textColor="@color/white"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMinTextSize="16sp"
                            app:autoSizeMaxTextSize="22sp"
                            app:autoSizeStepGranularity="1sp" />

                        <TextView
                            android:id="@+id/text_view_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:alpha="0.64"
                            android:text="xx.xx.xxxx"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMinTextSize="16sp"
                            app:autoSizeMaxTextSize="22sp"
                            app:autoSizeStepGranularity="1sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/text_silo_notification_on"
                            android:textColor="@color/white"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMinTextSize="16sp"
                            app:autoSizeMaxTextSize="22sp"
                            app:autoSizeStepGranularity="1sp" />

                        <TextView
                            android:id="@+id/text_view_notification_on"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:alpha="0.64"
                            android:text="xx.xx.xxxx"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMinTextSize="16sp"
                            app:autoSizeMaxTextSize="22sp"
                            app:autoSizeStepGranularity="1sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5">

            <com.john.waveview.WaveView
                android:id="@+id/wave_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                wave:above_wave_color="@color/white"
                wave:blow_wave_color="@color/white"
                wave:wave_height="large"
                wave:wave_hz="large"
                wave:fill_to_brim="true"
                wave:wave_length="little" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/silo" />

        </RelativeLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-6111292602356970/7893952569"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>